--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -3,17 +3,14 @@ name = "kernel"
 version = "0.1.0"
 edition = "2021"
 
+[package.metadata.bootloader]
+map-physical-memory = true
+
 [dependencies]
-# The bootloader is now a direct dependency
-bootloader = "0.9.23"
+# This is the correct dependency. It provides the build tools and the API.
+bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
 volatile = "0.2.7"
 spin = "0.9.8"
 lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
 x86_64 = "0.15.1"
 linked_list_allocator = "0.10.5"
-
-# NOTE: The 'bootloader_api' dependency is no longer needed
-
-[package.metadata.bootloader]
-# This tells the bootloader where to map the physical memory.
-map-physical-memory = true
